updates immigration status map to fix legend issueon mobile/?

--- a/maps/immigration-status-terms/static-files/css/project-styles.css
+++ b/maps/immigration-status-terms/static-files/css/project-styles.css
@@ -1,7 +1,9 @@
 #content-article {width: 100%; height: auto; margin: 0 auto 5px auto;}
 #content-action-bar {text-align: left; margin: 5px auto 10px auto;}
-#data-legend {padding: 0 0 20px 0;}
+#data-legend {padding: 0 0 0 0;}
 #data-legend-items li {display: inline; height: 25px; list-style-type: none; padding: 10px 10px 10px 10px;}
+
+#content-map-canvas {width: 100%; height: 700px; margin: 35px 0 10px 0;}
 
 /* data legend bottom margin */
 @media (min-width: 980px) {
